--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,19 +1,10 @@
 body {
   font-family: 'Montserrat', sans-serif;
-}
-
-
-html,
-#root,
-body {
-  font-family: 'Montserrat', sans-serif;
-  
   background: linear-gradient(412.9deg, rgba(255,255,255,1) 0%, rgb(253, 253, 253) 82.68%, rgba(235,235,235,1) 100%);
   height: 100 auto;
   width: 100% auto;
-  padding: 0;
   margin: 0;
- 
+  padding-top: 75px;
 }
 
 /* textarea,
@@ -126,6 +117,14 @@ background-color: rgb(23, 156, 245) !important;
 .friend-border4 {
   border-image-slice: 1;
   border-image-source: linear-gradient(to bottom right, rgb(0, 180, 90), rgb(251, 255, 1) );
+}
+
+#purple-hover:hover {
+  color: rgb(106, 0, 206) !important;
+}
+
+#neon-hover:hover {
+  color: rgb(172, 230, 12) !important;
 }
 
 
